k8s/upload-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: upload-service
  namespace: image-to-pdf

spec:
  replicas: 1

  selector:
    matchLabels:
      app: upload-service

  template:
    metadata:
      labels:
        app: upload-service

    spec:
      containers:
      - name: upload-service
        image: sne16/upload-service:13
        imagePullPolicy: Always

        ports:
        - containerPort: 8000

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"


        volumeMounts:
        - name: shared-storage
          mountPath: /shared

      volumes:
      - name: shared-storage
        persistentVolumeClaim:
          claimName: image-to-pdf-pvc
