k8s/converter-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: converter-service
  namespace: image-to-pdf

spec:
  selector:
    app: converter-service

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

  type: ClusterIP
