k8s/upload-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: upload-service
  namespace: image-to-pdf

spec:
  selector:
    app: upload-service

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

  type: ClusterIP
